--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 MONGO_DB_URL = mongodb://localhost:27017/
-ACCESS_TOKEN_LIFE=1m
+ACCESS_TOKEN_LIFE=1000m
 ACCESS_TOKEN_SECRET = d9abec87ae6dce689aef97c7
-REFRESH_TOKEN_LIFE = 20
+REFRESH_TOKEN_LIFE = 2000m
